# dftio

./: .gitignore  GEMINI.md  README.md  install.sh  pyproject.toml  pytest.ini
.github/workflows/: docs.yml  test.yml
dftio/: __main__.py  _version.py
dftio/data/: _keys.py
dftio/io/: parse.py
dftio/io/abacus/: abacus_parser.py
dftio/io/siesta/: check_siesta.ipynb  siesta_parser.py  try_siesta.ipynb
dftio/io/vasp/: vasp_parser.py
dftio/op/: grid_int.py
dftio/plot/: plot_eigs.py
docs/: _config.yml  _toc.yml  contributing.md  developer-guide.md  index.md  installation.md  references.bib
docs/api/: index.md
docs/tutorials/: index.md
docs/user-guide/: cli-reference.md  data-formats.md  parsing.md  quickstart.md
test/: test_abacus_add_h0.py  test_abacus_energy.py  test_abacus_parser.py  test_atomic_data_methods.py  test_data.py  test_data_np.py  test_datastruct.py  test_field.py  test_gaussian_parser.py  test_grid_int.py  test_ldos.py  test_logger.py  test_make_grid.py  test_neighbourlist.py  test_pyatb_parser.py  test_rescu_parser.py  test_siesta_parse.py  test_utils.py  test_vasp_energy.py  test_vasp_parser.py
test/data/abacus_md/: INPUT
test/data/abacus_md/OUT.ABACUS/: INPUT  MD_dump  STRU.cif
test/data/abacus_relax/: INPUT  STRU
test/data/abacus_relax/OUT.ABACUS/: INPUT  STRU.cif  STRU_ION_D
test/data/abacus_scf/OUT.ABACUS/: data-HR-sparse_SPIN0.csr
test/data/siesta/siesta_out_simple/: Au_cell.DM  Au_cell.ORB_INDX  Au_cell.TSHS  RUN.fdf  STRUCT.fdf
test/data/siesta/siesta_out_withband/: Au_cell.DM  Au_cell.TSHS  Au_cell.bands  RUN_band.fdf
test/data/vasp_scf/: OUTCAR  POSCAR
